[package]
name = "fdtdump"
version = "0.1.0"
license = "MIT"
description = "A implementation of fdtdump in Rust using the fdt-rs library"
authors = ["Sean Wilson <spwilson27@gmail.com>"]
edition = "2018"
repository = "https://github.com/rs-embedded/fdt-rs"
readme = "README.md"
categories = ["embedded", "parsing", "os"]
keywords = ["Device", "Tree", "DTB",  "FDT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
memmap = "0.7"
unsafe_unwrap = "0.1.0"

[dependencies.fdt-rs]
fdt-rs = "0.4"
