[package]
name = "fdtdump"
version = "0.1.0"
license = "MIT"
description = "A implementation of fdtdump in Rust using the fdt-rs library"
authors = ["Sean Wilson <spwilson27@gmail.com>"]
edition = "2018"
repository = "https://github.com/rs-embedded/fdtdump"
readme = "README.md"
categories = ["embedded", "parsing", "os"]
keywords = ["Device", "Tree", "DTB",  "FDT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1"
memmap = "0.7"

[dependencies.fdt-rs]
version = "0.4"

[dev-dependencies]
tempdir = "0.3.5"
